# DecAF

./: .gitignore  README.md  data_reformat_reasonvos.py  demo.py  demo_utils.py  pyproject.toml  readme.md
evaluation/: eval_rvos.py  eval_rvos_keypoints.py  eval_rvos_obj_iou.py  inf_utils.py  inference_attn_map_internvl.py  inference_attn_map_llavaov.py  inference_attn_map_qwenvl.py  inference_attn_mask.py  inference_keypoints.py  llm_prompting_utils.py  sam2_utils.py  zip_refvos_results.py
evaluation/scripts/: run_intern-vl-14b_F16_davis.sh  run_intern-vl-14b_F16_reasonvos.sh  run_intern-vl-14b_F16_revos.sh  run_intern-vl-2b_F16_davis.sh  run_intern-vl-2b_F16_reasonvos.sh  run_intern-vl-2b_F16_revos.sh  run_intern-vl-8b_F16_davis.sh  run_intern-vl-8b_F16_reasonvos.sh  run_intern-vl-8b_F16_revos.sh  run_llava-ov-7b_F16_davis.sh  run_llava-ov-7b_F16_reasonvos.sh  run_llava-ov-7b_F16_revos.sh  run_qwen2-vl-2b_F16_davis.sh  run_qwen2-vl-2b_F16_reasonvos.sh  run_qwen2-vl-2b_F16_revos.sh  run_qwen2-vl-7b_F16_davis.sh  run_qwen2-vl-7b_F16_reasonvos.sh  run_qwen2-vl-7b_F16_revos.sh  run_qwen2.5-vl-3b_F16_davis.sh  run_qwen2.5-vl-3b_F16_reasonvos.sh  run_qwen2.5-vl-3b_F16_revos.sh  run_qwen2.5-vl-7b_F16_davis.sh  run_qwen2.5-vl-7b_F16_davis_thr_abl.sh  run_qwen2.5-vl-7b_F16_keypoint_davis.sh  run_qwen2.5-vl-7b_F16_keypoint_reasonvos.sh  run_qwen2.5-vl-7b_F16_reasonvos.sh  run_qwen2.5-vl-7b_F16_revos.sh
model/: modeling_intern_vl_custom.py  modeling_llavaonevision_custom.py  modeling_qwen2_5_vl_custom.py  modeling_qwen2_vl_custom.py  sam2_video_predictor_custom.py
